<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PangeaApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="title_activity_registro">Registration</string>
    <string name="tab_text_1">Users</string>
    <string name="tab_text_2">Teachers</string>
    <string name="title_activity_registros">Records</string>
    <string name="menu_home">Social Network</string>
    <string name="menu_gallery">Publish</string>
    <string name="menu_slideshow">Home Pangea</string>
    <string name="menu_video">Video call</string>
    <string name="menu_traduccion">Translation</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Spinner-->
    <string name="back"><![CDATA[<-]]></string>


    <string name="forward"><![CDATA[->]]></string>
    <string name="facebook_app_id">443299894223330</string>


    <string name="fb_login_protocol_scheme">fb1234</string>


    <!--facebook-->

    <string name="facebook_client_token">b191b544abfc108b3c41f27387865b22</string>
    <string-array name="idiomas_array">
        <item>Ingles</item>
        <item>Español</item>
        <item>Aleman</item>
        <item>Italiano</item>
        <item>Frances</item>
        <item>Japones</item>
        <item>Chino</item>
    </string-array>
    <string-array name="motivos_rray">
        <item>Trabajo</item>
        <item>Viajes</item>
        <item>Eduacion</item>
        <item>Familia/Amigos</item>
    </string-array>


    <!-- Traducciones Login -->

    <string name="Email">Email</string>
    <string name="Login">Login</string>
    <string name="Registro">Register</string>
    <string name="Sign_In">Sign In</string>
    <string name="Olvidaste_contraseña">¿Olvidaste tu contraseña?</string>

    <!-- Traducciones Registro -->
    <string name="registro">Registration</string>
    <string name="alumnos">Students</string>
    <string name="profesores">Teachers</string>
    <string name="primer_nombre">First name</string>
    <string name="segundo_nombre">Second name</string>
    <string name="Apellido_Paterno">Father\'s Last name</string>
    <string name="Apellido_Materno">Mother\'s last name</string>
    <string name="Sexo">Sex</string>
    <string name="Hombre">Men</string>
    <string name="Mujer">Women</string>
    <string name="Otro">Other</string>
    <string name="idioma_nativo">Native Language</string>
    <string name="Idioma_de_interes">Language of interest</string>
    <string name="Nivel_del_idioma_de_interes">Language level of interest</string>
    <string name="Pais_de_origen">Country of origin</string>
    <string name="Motivos_de_aprendizaje">Learning motives</string>
    <string name="Tematica_de_interes">Topic of interest</string>
    <string name="correo">Mail</string>
    <string name="Siguiente">Next</string>
    <string name="Teléfono">Telephone</string>
    <string name="Contraseña">Password</string>
    <string name="Confirmar_la_contraseña">confirm password</string>

    <!-- Traducciones Registro pt 2 -->
    <string name="casi_terminamos">Almost Finished</string>
    <string name="nombre_perfil">Profile Name</string>
    <string name="Registrarse">Sign up</string>


    <!-- publicaciones multimedia -->
    <string name="Reproducir">Play</string>
    <string name="Comentar">Comment</string>


    <!-- solicitudes -->
    <string name="Solicitudes">Requests</string>
    <string name="Amistades">Friends</string>
    <string name="Amistades_sugeridas">Suggested Friends</string>


    <!-- Registro profe -->
    <string name="Nombre_Certificado">Certificate Name</string>
    <string name="Expedido_Por">Issued By</string>
    <string name="Lengua_Certificada">Certified Language</string>
    <string name="Disponibilidad">Availability</string>
    <string name="Zona_Horaria">Time Zone</string>
    <string name="Cuenta_Bancaria">Bank Account</string>
    <string name="Ultimo_Paso">Last Step</string>


    <!-- recuperar_contrase;a -->
    <string name="Recuperar_Contraseña">Recover Password</string>
    <string name="Solicitud_realizada">Your request was made, an email was sent to you with the password update process, check your SPAM folder.</string>
    <string name="Actualizar">Update</string>


    <!-- Profesores -->
    <string name="Idioma_Enseñar">Language Teach</string>
    <string name="Nivel_de_enseñanza">Level of teaching</string>
    <string name="Precio_Hora">Hour Price</string>


    <!-- perfil_buscado -->
    <string name="Traducir">Translate</string>
    <string name="Publicar">Publish</string>


    <!-- enviar_solicitud -->
    <string name="Agregar">Add</string>


    <!-- comentarios_traduccion -->
    <string name="Escribe_tu_Comentario">Write your Comment</string>


    <!-- chat -->
    <string name="Escribe_el_mensaje">Write the message</string>


    <!-- buscador -->
    <string name="Solicitudes_de_Amistad">Friend Requests</string>

    <!-- amistad -->
    <string name="Amigos">Friends</string>

    <!-- aceptar rechazar -->
    <string name="Rechazar">Reject</string>
    <string name="Aceptar">Accept</string>
    <string name="selecciona_el_idioma_que_prefieras_en_la_aplicaci_n">Select the language you prefer in the application.</string>
    <string name="ingles">English</string>
    <string name="espa_ol">Spanish</string>
    <string name="guardar">Save</string>
    <string name="que_estas_pensando">What are you thinking?</string>
    <string name="publicaciones">Publications</string>
    <string name="imagenes">Images</string>
    <string name="multimedia">Multimedia</string>
    <string name="salon_de_clases">Classroom</string>
    <string name="alumno">Student</string>
    <string name="clase">Class</string>
    <string name="contrase_a_clase">Password of the class</string>
    <string name="tomar_clase">Take Class</string>
    <string name="traductor">Translator</string>
    <string name="escribe_algo">Write something</string>
    <string name="mis_traducciones">My translations</string>
    <string name="traducciones">Translations</string>
    <string name="eventos">Events</string>
    <string name="foro">Forum</string>
    <string name="escribe_tu_pregunta">Write your question</string>
    <string name="preguntas_recientes">Recent questions</string>
    <string name="msg_token_fmt">TOKEN!</string>
    <string name="title_activity_palabras">PalabrasActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>