<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PerfilAmigos.PerfilAmigosActivity">

    <RelativeLayout
        android:layout_width="411dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgHeader"
                    android:layout_width="match_parent"
                    android:background="#808080"
                    android:layout_height="180dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="648dp"
                    android:layout_marginTop="-92dp"
                    android:layout_marginBottom="-2dp"
                    android:orientation="vertical"
                    android:padding="10dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="10sp"
                        android:orientation="vertical">
                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal"
                            android:elevation="12dp"
                            android:id="@+id/view2"
                            app:cardCornerRadius="50dp">
                            <de.hdodenhof.circleimageview.CircleImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:foregroundGravity="center"
                                app:civ_border_color="#FFFFFF"
                                app:civ_border_width="3dp"
                                android:id="@+id/foto_perfil"
                                android:background="#AAAAAA" />
                        </com.google.android.material.card.MaterialCardView>


                        <TextView
                            android:id="@+id/nombreUsuario"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="start|top"
                            android:layout_marginTop="10sp"
                            android:layout_marginBottom="10sp"
                            android:text="@string/que_estas_pensando"
                            android:textColor="@color/black"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:orientation="vertical">


                        <EditText
                            android:id="@+id/pregunta"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:ems="10"
                            android:gravity="start|top"
                            android:inputType="textMultiLine"
                            android:text="@string/que_estas_pensando"
                            android:textSize="10sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:orientation="horizontal">


                            <Button
                                android:id="@+id/btnImagen"
                                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                                android:layout_width="57dp"
                                android:layout_height="40dp"
                                android:layout_marginStart="30dp"
                                android:backgroundTint="#BAB6B6"
                                app:icon="@drawable/ic_menu_camera"
                                app:iconTint="#2196F3">
                            </Button>

                            <Button
                                android:id="@+id/btnAudio"
                                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                                android:layout_width="52dp"
                                android:layout_height="40dp"
                                android:layout_marginStart="10dp"
                                android:backgroundTint="#BAB6B6"
                                android:src="@color/teal_200"
                                app:icon="@drawable/zm_menu_icon_plist_unmute"
                                app:iconTint="#2196F3">

                            </Button>

                            <Button
                                android:id="@+id/btnReproAudio"
                                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                                android:layout_width="55dp"
                                android:layout_height="40dp"
                                android:layout_marginStart="10dp"
                                android:backgroundTint="#BAB6B6"
                                android:src="@color/teal_200"
                                app:icon="@drawable/zm_chatto_voice_playing_f3"
                                app:iconTint="#2196F3">
                            </Button>

                            <Button
                                android:id="@+id/btnTraducir"
                                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                                android:layout_width="60dp"
                                android:padding="3sp"
                                android:layout_height="40dp"
                                android:layout_marginStart="10dp"
                                android:backgroundTint="@color/white"
                                android:text="@string/Traducir"
                                android:textColor="#2196F3"
                                android:textSize="9dp">
                            </Button>

                            <Button
                                android:id="@+id/publicar"
                                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                                android:layout_width="60dp"
                                android:padding="3sp"
                                android:layout_height="40dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="40dp"
                                android:backgroundTint="@color/white"
                                android:text="@string/Publicar"
                                android:textColor="#2196F3"
                                android:textSize="9dp" />

                        </LinearLayout>


                        <TextView
                            android:id="@+id/traducido"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="TextView"
                            android:visibility="invisible" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/userPerfil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:textColor="#2196F3"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/PaisPerfil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:textColor="#1B1A1A"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/CursoPerfil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:textColor="#232323"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nivelPerfil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:textColor="#201F1F"
                        android:textStyle="bold" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewPublicaciones"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.137"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />


                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>